Version 1.0 - XX April 2004
    * Added configure-time selection of whether to build gimfavorites
      or not.
    * Added TagLib as a optional dependency to...
    * Allow song-length limiting, new API functions added related.
    * Add song-length limiting to the GTK+ GUI and console application,
      closing feature request 934108.
    * Add --music-cd to the console application.

Version 0.4 (1.0 RC1) - 17 April 2004
    * Split the UI from the engine
    * Added a GTK2 user interface (gimfavorites)
    * Made the GTK2 UI follow the GNOME Human Interface Guidelines
    * Up the number of attempted crams before aborting (they take so
      little time...) to 100 from 50.
    * Added a "tools" directory and an XMMS enqeue BASH script.
      (Thanks, Anonymous!) - Resolves Feature Request 936756

Version 0.3 - 24 March 2004
    * Major speed improvements. (~432.5 times faster)
    * Added the --list option.
    * Moved "target" to being a mandatory PATH statement at the end of the
      option list.
    * Fix for paths without a trailing /
    * Usage cleanups
    * Added the --cram option to keep trying to fit subsequent music files
      into
      remaining space until we get tired. :)
    * Fixed support for --maxsize parameters greater than 4.2 GB (moved to
      64-bit unsigned long long numbers. That'll fix those overflows!).
    * Made --mask an optional parameter with the addition of a auto-mask-
      determining algorithm

    (Kudos to Mag, the author of IMMS, for most of these suggestions!)

Version 0.2 - 22 March 2004
    * Added --cd, --dvd, --help, and --version options.
    * First published release.

Version 0.1 - 21 March 2004
    * The Beginning.