@@ -72,7 +72,7 @@ dnl    AC_CHECK_LIB(libtag,Tag::Tag(),, [with_taglib=no])
 fi
 
 if test "x$with_taglib" = "xno"; then
-    AC_MSG_ERROR([TagLib Not Found. Song length limiting will not work.])
+    AC_MSG_RESULT([TagLib Not Found. Song length limiting will not work.])
 fi
 
 
