@@ -1,4 +1,4 @@
-// generated 2004/4/23 14:36:40 EDT by pug@resmiranda.berthall.com.(none)
+// generated 2004/4/23 15:11:38 EDT by pug@resmiranda.berthall.com.(none)
 // using glademm V2.0.0.1
 //
 // DO NOT EDIT THIS FILE ! It was created using
@@ -413,6 +413,7 @@ mainWindow_glade::mainWindow_glade(
    limitLengthRadio->set_mode(true);
    limitLengthRadio->set_active(false);
    minutesSpinButton->set_flags(Gtk::CAN_FOCUS);
+   _tooltips.set_tip(*minutesSpinButton, _("Number of minutes to which the collection should be limited"), "");
    minutesSpinButton->set_update_policy(Gtk::UPDATE_ALWAYS);
    minutesSpinButton->set_numeric(true);
    minutesSpinButton->set_digits(0);
@@ -424,6 +425,7 @@ mainWindow_glade::mainWindow_glade(
    label20->set_use_markup(false);
    label20->set_selectable(false);
    secondsSpinButton->set_flags(Gtk::CAN_FOCUS);
+   _tooltips.set_tip(*secondsSpinButton, _("Number of seconds to which the collection should be limited"), "");
    secondsSpinButton->set_update_policy(Gtk::UPDATE_ALWAYS);
    secondsSpinButton->set_numeric(true);
    secondsSpinButton->set_digits(0);
